--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Configurations
-title:            Vietzettt's Blogs
-longtitle:        Vietzettt's Blogs
-author:           Vietzettt
-email:            XX008@mpei.ru
+title: Vietzettt's WriteUppp
+longtitle: Vietzettt's WriteUppp
+author: Vietzettt
+email: xx008@mpei.ru
 description: >
   Build Jekyll site with the GitBook style.
 
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://vietzettt.github.io/'
+url:              'https://vietzettt.ru/'
 baseurl:           
 rss:              RSS
 
