--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,9 @@ collections:
   pages:
     output: true
     permalink: /:collection/:path/
+  posts:
+    output: true
+    permalink: /:collection/:year/:month/:title
 
 page_width: 800px
 
