fix name domain

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >
 version:          1.0
 gitbook_version:  3.2.3
 
-url:              'https://vietzettt.ru/'
+url:              'https://vietzettt.github.io/'
 baseurl:           
 rss:              RSS
 
